[package]
name = "rofl-parser"
version = "0.1.22"
edition = "2021"
license = "Apache-2.0"
description = "Parse useable data from `*.rofl` file"
repository = "https://github.com/tiger1710/rofl-parser"

exclude = [
    "*.rofl"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
